# EmpDocker

./: .gitignore  Dockerfile  README.md  make.def
emp-sh2pc/: CMakeLists.txt
emp-sh2pc/models/: resnet_image.txt
emp-sh2pc/models/resnet18/: bn1.bias.txt  bn1.running_mean.txt  bn1.running_var.txt  bn1.weight.txt  conv1.weight.txt  fc.bias.txt  fc.weight.txt  layer1.0.bn1.bias.txt  layer1.0.bn1.running_mean.txt  layer1.0.bn1.running_var.txt  layer1.0.bn1.weight.txt  layer1.0.bn2.bias.txt  layer1.0.bn2.running_mean.txt  layer1.0.bn2.running_var.txt  layer1.0.bn2.weight.txt  layer1.0.conv1.weight.txt  layer1.0.conv2.weight.txt  layer1.1.bn1.bias.txt  layer1.1.bn1.running_mean.txt  layer1.1.bn1.running_var.txt  layer1.1.bn1.weight.txt  layer1.1.bn2.bias.txt  layer1.1.bn2.running_mean.txt  layer1.1.bn2.running_var.txt  layer1.1.bn2.weight.txt  layer1.1.conv1.weight.txt  layer1.1.conv2.weight.txt  layer2.0.bn1.bias.txt  layer2.0.bn1.running_mean.txt  layer2.0.bn1.running_var.txt  layer2.0.bn1.weight.txt  layer2.0.bn2.running_mean.txt  layer2.0.bn2.running_var.txt  layer2.0.bn2.weight.txt  layer2.0.conv1.weight.txt  layer2.0.conv2.weight.txt  layer2.0.downsample.0.weight.txt  layer2.0.downsample.1.bias.txt  layer2.0.downsample.1.running_mean.txt  layer2.0.downsample.1.running_var.txt  (+56 more)
emp-sh2pc/src/lib/: ReLU.cpp  ReLU.h  batchnorm_gc.cpp  batchnorm_gc.h  conv2d.cpp  conv2d.h  conv_layer.cpp  conv_layer.h  dense_layer.cpp  dense_layer.h  extras.cpp  extras.h  flattens.cpp  flattens.h  helper_functions.cpp  helper_functions.h  max_pooling.cpp  max_pooling.h  mean_pooling.cpp  mean_pooling.h  print_outputs.cpp  print_outputs.h  read_txt.cpp  read_txt.h  read_weights.cpp  read_weights.h
emp-sh2pc/test/: CMakeLists.txt  ReLU.cpp  circuit_file.cpp  client_fhe.cpp  combine.cpp  old_combine.cpp  resnet_test.cpp  server_fhe.cpp  split_combine.cpp  subtract_int.cpp  temp_ResNet18.cpp
gazelle/: CMakeLists.txt
